<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.trianguloy.watchlaterall.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_description"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_privacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="onClick"
                android:text="@string/btn_privacyPolicy"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_mainPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="onClick"
                android:text="@string/btn_mainPage"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/smallSeparator3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:src="@color/colorAccent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_exampleVideo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_example"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/edTxt_exampleVideo"
                android:inputType="none"
                android:text="@string/edTxt_exampleVideo"
                android:textIsSelectable="true" />


            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:contentDescription="@string/cntDesc_share"
                android:onClick="onClick"
                android:src="@android:drawable/ic_menu_share" />

        </LinearLayout>

        <ImageView
            android:id="@+id/bigseparator1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:src="@color/colorPrimary"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_settings"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_description_selectedByDefault" />

        <CheckBox
            android:id="@+id/chk_defaultSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chk_selectByDefault" />

        <ImageView
            android:id="@+id/smallSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:src="@color/colorAccent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_description_openLinks" />

        <Switch
            android:id="@+id/swt_openLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_openLinks" />

        <ImageView
            android:id="@+id/smallSeparator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:src="@color/colorAccent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_description_autoAdd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_autoAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_autoAdd" />

            <SeekBar
                android:id="@+id/skBr_autoAdd"
                style="@android:style/Widget.DeviceDefault.SeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="10"
                android:progress="1" />
        </LinearLayout>

        <ImageView
            android:id="@+id/smallSeparator4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:src="@color/colorAccent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_description_unselectAccount" />

        <Button
            android:id="@+id/btn_resetAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_resetAccount" />

        <ImageView
            android:id="@+id/smallSeparator5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:src="@color/colorAccent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_description_blackList" />

        <EditText
            android:id="@+id/edTxt_blackList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_hint_blacklist"
            android:inputType="textMultiLine" />

    </LinearLayout>


</ScrollView>
